<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_image"
        android:layout_width="110dp"
        android:layout_height="160dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_name_of_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_activity_paddings"
            android:text="@string/list_item_products_name" />

        <TextView
            android:id="@+id/list_price_of_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_activity_paddings"
            android:text="@string/list_item_products_price" />

        <TextView
            android:id="@+id/list_quantity_of_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/details_activity_paddings"
            android:text="@string/list_item_products_quantity" />


    </LinearLayout>

    <Button
        android:id="@+id/sale_item_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sale_button_margin"
        android:layout_marginTop="@dimen/sale_button_margin"
        android:text="@string/sale_button_text" />

</LinearLayout>